gcc/testsuite/rust/rustc/ui/parser/inner-attr-after-doc-comment.rs
#![feature(lang_items)]
/**
 * My module
 */

#![recursion_limit="100"]
// { dg-error "" "" { target *-*-* } .-1 }
fn main() {}

